--- a/index.html
+++ b/index.html
@@ -399,14 +399,14 @@
             </div>
 
             <div class="contact-box">
-                <form action="">
+                <form action="https://formspree.io/f/xeoqkpyg" method="post">
                     <div class="heading">Contact <span>Me!</span></div>
                     <div class="isi-box">
-                        <input type="text" placeholder="Full Name" required>
-                        <input type="email" placeholder="Email Adress" required>
-                        <input type="text" placeholder="Phone Number" required>
-                        <input type="text" placeholder="Email Subject" required>
-                        <textarea name="arioadiyoso" id="desc" placeholder="Massage(opsional)"></textarea>
+                        <input name="Full Name" type="text" placeholder="Full Name" required>
+                        <input name="Email Adress" type="email" placeholder="Email Adress" required>
+                        <input name="Phone Number" type="text" placeholder="Phone Number" required>
+                        <input name="Email Subject" type="text" placeholder="Email Subject" required>
+                        <textarea name="Massage id="desc" placeholder="Massage(opsional)"></textarea>
                     </div>
                     <button type="submit" class="btn">Send Massage</button>
                 </form>
