--- a/index.html
+++ b/index.html
@@ -242,6 +242,10 @@
                                 <img class="img-skill" src="images/icons8-microsoft-powerpoint-2019.svg" alt="svg">
                                 <span>PowerPoint</span>
                             </div>
+                            <div class="resume-item">
+                                <img class="img-skill" src="images/256px-Canva_icon_2021.svg.png" alt="svg">
+                                <span>Canva</span>
+                            </div>
                         </div>
                 </div>
 
